--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="" />
   </head>
-  <body></body>
+  <body>
+    Тестовая запись
+  </body>
 </html>
