--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -39,35 +40,41 @@
     <!-- /.header -->
 
     <main>
-      <section class="hero">
-        <div class="instagram hero__instagram">
-          <a href="#" class="instagram__link">Instagram</a>
-        </div>
-        <!-- /.instagram -->
-
-        <div class="hero__content">
-          <h1 class="title hero__title">
-            Турецкий ремонт в<span class="title_primary">Ростове-на-Дону</span>
-          </h1>
-          <p class="hero__text">
-            Получите готовый ремонт под ключ в срок с экономией рабочего времени
-            до 45 дней и 20% от стоимости материалов за счет организации работы
-          </p>
-
-          <div class="hero__buttons">
-            <button class="button hero__button button_primary">
-              Рассчитать стоимость
-            </button>
-            <button class="button hero__button button_outline">
-              Отправить заявку
-            </button>
+      <div class="container">
+        <section class="hero">
+          <div class="instagram hero__instagram">
+            <a href="#" class="instagram__link">Instagram</a>
           </div>
-          <!-- /.hero__buttons -->
-        </div>
-        <!-- /.hero__content -->
-        <a href="#" class="hero__scroll-down">Листайте вниз</a>
-      </section>
-      <!-- /.hero -->
+          <!-- /.instagram -->
+
+          <div class="hero__content">
+            <h1 class="title hero__title">
+              Турецкий ремонт в<span class="title_primary"
+                >Ростове-на-Дону</span
+              >
+            </h1>
+            <p class="hero__text">
+              Получите готовый ремонт под ключ в срок с экономией рабочего
+              времени до 45 дней и 20% от стоимости материалов за счет
+              организации работы
+            </p>
+
+            <div class="hero__buttons">
+              <button class="button hero__button button_primary">
+                Рассчитать стоимость
+              </button>
+              <button class="button hero__button button_outline">
+                Отправить заявку
+              </button>
+            </div>
+            <!-- /.hero__buttons -->
+          </div>
+          <!-- /.hero__content -->
+          <a href="#" class="hero__scroll-down">Листайте вниз</a>
+        </section>
+        <!-- /.hero -->
+      </div>
+      <!-- /.container -->
     </main>
   </body>
 </html>
