--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="instagram hero__instagram">
         <a href="#" class="instagram__link">Instagram</a>
       </div>
-      <!-- /.instagram111 -->
+      <!-- /.instagram -->
       <div class="container">
 
         <div class="hero__content">
