--- a/index.html
+++ b/index.html
@@ -42,35 +42,33 @@
   <main>
 
     <section class="hero">
-      <div class="instagram hero__instagram">
-        <a href="#" class="instagram__link">Instagram</a>
-      </div>
-      <!-- /.instagram -->
+
+      <a href="#" class="instagram hero__instagram">Instagram</a>
+
+      <div class="hero__content"></div>
+
       <div class="container">
 
-        <div class="hero__content">
-          <h1 class="title hero__title">
-            Турецкий ремонт в <span class="title_primary">Ростове-на-Дону</span>
-          </h1>
-          <p class="hero__text">
-            Получите готовый ремонт под ключ в срок с экономией рабочего
-            времени до 45 дней и 20% от стоимости материалов за счет
-            организации работы
-          </p>
+        <h1 class="title hero__title">
+          Турецкий ремонт в <span class="title_primary">Ростове-на-Дону</span>
+        </h1>
+        <p class="hero__text">
+          Получите готовый ремонт под ключ в срок с экономией рабочего
+          времени до 45 дней и 20% от стоимости материалов за счет
+          организации работы
+        </p>
 
-          <div class="hero__buttons">
-            <button class="button hero__button button_primary">
-              Рассчитать стоимость
-            </button>
-            <button class="button hero__button button_outline">
-              Отправить заявку
-            </button>
-          </div>
-          <!-- /.hero__buttons -->
-        </div>
-        <!-- /.hero__content -->
-      </div>
-      <!-- /.container -->
+        <div class="hero__buttons">
+          <button class="button hero__button button_primary">
+            Рассчитать стоимость
+          </button>
+          <button class="button hero__button button_outline">
+            Отправить заявку
+          </button>
+        </div><!-- /.hero__buttons -->
+
+      </div><!-- /.container -->
+      </div><!-- /.hero__content -->
       <a href="#" class="hero__scroll-down">Листайте вниз</a>
     </section>
     <!-- /.hero -->
