added instagram button

--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
   <main>
 
     <section class="hero">
+      <div class="instagram hero__instagram">
+        <a href="#" class="instagram__link">Instagram</a>
+      </div><!-- /.instagram hero__instagram -->
 
-      <a href="#" class="instagram hero__instagram">Instagram</a>
 
       <div class="hero__content"></div>
 
