--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
   <title>Document</title>
 </head>
 
@@ -46,31 +47,32 @@
         <a href="#" class="instagram__link">Instagram</a>
       </div><!-- /.instagram hero__instagram -->
 
-
-      <div class="hero__content"></div>
-
       <div class="container">
+        <div class="hero__content">
 
-        <h1 class="title hero__title">
-          Турецкий ремонт в <span class="title_primary">Ростове-на-Дону</span>
-        </h1>
-        <p class="hero__text">
-          Получите готовый ремонт под ключ в срок с экономией рабочего
-          времени до 45 дней и 20% от стоимости материалов за счет
-          организации работы
-        </p>
 
-        <div class="hero__buttons">
-          <button class="button hero__button button_primary">
-            Рассчитать стоимость
-          </button>
-          <button class="button hero__button button_outline">
-            Отправить заявку
-          </button>
-        </div><!-- /.hero__buttons -->
 
+          <h1 class="title hero__title">
+            Турецкий ремонт в&nbsp;<span class="title_primary">Ростове-на-Дону</span>
+          </h1>
+          <p class="hero__text">
+            Получите готовый ремонт под ключ в срок с экономией рабочего
+            времени до 45 дней и 20% от стоимости материалов за счет
+            организации работы
+          </p>
+
+          <div class="hero__buttons">
+            <button class="button hero__button button_primary">
+              Рассчитать стоимость
+            </button>
+            <button class="button hero__button button_outline">
+              Отправить заявку
+            </button>
+          </div><!-- /.hero__buttons -->
+
+
+        </div><!-- /.hero__content -->
       </div><!-- /.container -->
-      </div><!-- /.hero__content -->
       <a href="#" class="hero__scroll-down">Листайте вниз</a>
     </section>
     <!-- /.hero -->
