--- a/index.html
+++ b/index.html
@@ -211,6 +211,143 @@
       <!-- /.container -->
     </section>
     <!-- /.section types -->
+
+
+    <section class="section types">
+      <div class="container">
+
+
+        <div class="section-title types__section-title">
+          <h2 class="section-title__heading">Дизайн-проект</h2>
+          <!-- /.section-title__heading -->
+          <div class="section-title__image">
+            <img src="img/repair.svg" alt="repair">
+          </div>
+          <!-- /.section-title__image -->
+
+          <h2 class="section-title__text">
+            Дизайн-проект не только помогает сделать ремонт вашей квартиры более современным, но и значительно
+            удешевляет материалы
+            и сокращает время ремонтных работ
+          </h2>
+          <!-- /.section-title__text -->
+
+
+        </div>
+        <!-- /.section-title -->
+        <div class="row">
+          <div class="col">
+            <div class="card types__card">
+              <img src="img/design-project/design-1.jpg" alt="Косметический ремонт" class="card__image">
+              <div class="card__text">
+                <h3 class="card__title">Минимальный</h3>
+                <!-- /.card__title -->
+                <ul class="card__list">
+                  <li class="card__item">Измерительные чертежи</li>
+                  <!-- /.card__item -->
+                  <li class="card__item">Перепланировка</li>
+                  <!-- /.card__item -->
+                  <li class="card__item">Планировка мебели</li>
+                  <!-- /.card__item -->
+                  <li class="card__item">Сантехнический план</li>
+                  <!-- /.card__item -->
+                </ul>
+                <!-- /.card__list -->
+                <strong class="card__pricetag">
+                  150 руб./м<sup>2</sup>
+                </strong>
+                <!-- /.card__pricetag -->
+              </div>
+              <!-- /.card__text -->
+            </div>
+            <!-- /.card -->
+          </div>
+          <!-- /.col -->
+          <div class="col">
+            <div class="card types__card">
+              <img src="img/design-project/design-2.jpg" alt="Капитальный ремонт" class="card__image">
+              <div class="card__text">
+                <h3 class="card__title">Стандартный</h3>
+                <!-- /.card__title -->
+                <ul class="card__list">
+                  <li class="card__item">Измерительные чертежи</li>
+                  <!-- /.card__item -->
+                  <li class="card__item">Перепланировка</li>
+                  <!-- /.card__item -->
+                  <li class="card__item">Планировка мебели</li>
+                  <!-- /.card__item -->
+                  <li class="card__item">План потолков</li>
+                  <!-- /.card__item -->
+                  <li class="card__item">План этажей</li>
+                  <!-- /.card__item -->
+                  <li class="card__item">План электрики</li>
+                  <!-- /.card__item -->
+                  <li class="card__item">План света</li>
+                  <!-- /.card__item -->
+                </ul>
+                <!-- /.card__list -->
+                <strong class="card__pricetag">
+                  400 руб./м<sup>2</sup>
+                </strong>
+                <!-- /.card__pricetag -->
+              </div>
+              <!-- /.card__text -->
+            </div>
+            <!-- /.card -->
+          </div>
+          <!-- /.col -->
+          <div class="col">
+            <div class="card types__card">
+              <img src="img/design-project/design-3.jpg" alt="Дизайнерский ремонт" class="card__image">
+              <div class="card__text">
+                <h3 class="card__title">Полный</h3>
+                <!-- /.card__title -->
+                <ul class="card__list">
+                  <li class="card__item">Измерительные чертежи</li>
+                  <!-- /.card__item -->
+                  <li class="card__item">Перепланировка</li>
+                  <!-- /.card__item -->
+                  <li class="card__item">Планировка мебели</li>
+                  <!-- /.card__item -->
+                  <li class="card__item">План потолков</li>
+                  <!-- /.card__item -->
+                  <li class="card__item">План этажей</li>
+                  <!-- /.card__item -->
+                  <li class="card__item">План электрики</li>
+                  <!-- /.card__item -->
+                  <li class="card__item">План света</li>
+                  <!-- /.card__item -->
+                  <li class="card__item">Стенные развертки</li>
+                  <!-- /.card__item -->
+                  <li class="card__item">3D визуализация</li>
+                  <!-- /.card__item -->
+                  <li class="card__item">Смета на материалы</li>
+                  <!-- /.card__item -->
+                  <li class="card__item">Выезд на подбор материалов</li>
+                  <!-- /.card__item -->
+                  <li class="card__item">Выбор мебели</li>
+                  <!-- /.card__item -->
+                </ul>
+                <!-- /.card__list -->
+                <strong class="card__pricetag">
+                  900 руб./м<sup>2</sup>
+                </strong>
+                <!-- /.card__pricetag -->
+              </div>
+              <!-- /.card__text -->
+            </div>
+            <!-- /.card -->
+          </div>
+          <!-- /.col -->
+        </div>
+        <!-- /.row -->
+
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section types -->
+
+
   </main>
 </body>
 
