feat: added js function for modal

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div class="contacts menu__contacts">
           <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
-          <button class="button contacts__button button_primary">
+          <button class="button contacts__button button_primary" data-toggle="modal">
             Заказать звонок
           </button>
         </div>
@@ -62,7 +62,7 @@
           </p>
 
           <div class="hero__buttons">
-            <button class="button hero__button button_primary">
+            <button class="button hero__button button_primary" data-toggle="modal">
               Рассчитать стоимость
             </button>
             <button class="button hero__button button_outline">
@@ -374,7 +374,7 @@
     <!-- /.modal__dialog -->
   </div>
   <!-- /.modal -->
-
+  <script src="js/main.js"></script>
 </body>
 
 </html>
