--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <!-- /.section types -->
 
 
-    <section class="section types">
+    <section class="section types section_mobile-dark">
       <div class="container">
 
 
