--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
   <link rel="stylesheet" href="css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
   <title>Document</title>
@@ -76,6 +77,147 @@
       <a href="#" class="hero__scroll-down">Листайте вниз</a>
     </section>
     <!-- /.hero -->
+
+    <section class="section section_dark projects">
+      <div class="container">
+        <div class="row">
+          <div class="col-50">
+            <div class="section-title section-title_left">
+              <h2 class="section-title__heading section-title__heading_primary">Завершенные <span
+                  class="section-title__word">проекты</span></h2>
+              <!-- /.section-title__heading -->
+              <p class="section-title__text">
+                На сайте представлена ​​лишь небольшая часть работ, выполняемых нашей компанией. За 14 лет работы на
+                строительном рынке
+                мы осчастливили более 1000 семей
+              </p>
+              <!-- /.section-title__text -->
+            </div>
+            <!-- /.section-title -->
+
+            <!-- Slider main container -->
+            <div class="swiper-container">
+              <!-- Additional required wrapper -->
+              <div class="swiper-wrapper swiper-no-swiping">
+                <!-- Slides -->
+                <div class="swiper-slide">
+                  <div class="swiper-slide__text">
+                    <h3 class="swiper-slide__heading">Город</h3>
+                    <span class="swiper-slide__value">Ростов-на-Дону</span>
+                  </div>
+                  <!-- /.swiper-slide__text -->
+
+                  <div class="swiper-slide__text">
+                    <h3 class="swiper-slide__heading">Площадь</h3>
+                    <span class="swiper-slide__value">81 кв.м</span>
+                  </div>
+                  <!-- /.swiper-slide__text -->
+
+                  <div class="swiper-slide__text">
+                    <h3 class="swiper-slide__heading">Срок ремонта</h3>
+                    <span class="swiper-slide__value">3,5 месяца</span>
+                  </div>
+                  <!-- /.swiper-slide__text -->
+
+                  <div class="swiper-slide__text">
+                    <h3 class="swiper-slide__heading">Стоимость</h3>
+                    <span class="swiper-slide__value">По запросу</span>
+                  </div>
+                  <!-- /.swiper-slide__text -->
+
+                </div>
+
+                <div class="swiper-slide">
+                  <div class="swiper-slide__text">
+                    <h3 class="swiper-slide__heading">Город</h3>
+                    <span class="swiper-slide__value">Ростов-на-Дону</span>
+                  </div>
+                  <!-- /.swiper-slide__text -->
+
+                  <div class="swiper-slide__text">
+                    <h3 class="swiper-slide__heading">Площадь</h3>
+                    <span class="swiper-slide__value">81 кв.м</span>
+                  </div>
+                  <!-- /.swiper-slide__text -->
+
+                  <div class="swiper-slide__text">
+                    <h3 class="swiper-slide__heading">Срок ремонта</h3>
+                    <span class="swiper-slide__value">3,5 месяца</span>
+                  </div>
+                  <!-- /.swiper-slide__text -->
+
+                  <div class="swiper-slide__text">
+                    <h3 class="swiper-slide__heading">Стоимость</h3>
+                    <span class="swiper-slide__value">По запросу</span>
+                  </div>
+                  <!-- /.swiper-slide__text -->
+
+                </div>
+
+                <div class="swiper-slide">
+                  <div class="swiper-slide__text">
+                    <h3 class="swiper-slide__heading">Город</h3>
+                    <span class="swiper-slide__value">Ростов-на-Дону</span>
+                  </div>
+                  <!-- /.swiper-slide__text -->
+
+                  <div class="swiper-slide__text">
+                    <h3 class="swiper-slide__heading">Площадь</h3>
+                    <span class="swiper-slide__value">81 кв.м</span>
+                  </div>
+                  <!-- /.swiper-slide__text -->
+
+                  <div class="swiper-slide__text">
+                    <h3 class="swiper-slide__heading">Срок ремонта</h3>
+                    <span class="swiper-slide__value">3,5 месяца</span>
+                  </div>
+                  <!-- /.swiper-slide__text -->
+
+                  <div class="swiper-slide__text">
+                    <h3 class="swiper-slide__heading">Стоимость</h3>
+                    <span class="swiper-slide__value">По запросу</span>
+                  </div>
+                  <!-- /.swiper-slide__text -->
+
+                </div>
+
+              </div>
+
+              <!-- If we need navigation buttons -->
+              <div class="swiper-button-prev"></div>
+              <div class="swiper-pagination"></div>
+              <div class="swiper-button-next"></div>
+
+            </div>
+
+          </div>
+          <!-- /.col-50 -->
+          <div class="col-50">
+
+
+            <!-- Slider main container -->
+            <div class="swiper-container">
+              <!-- Additional required wrapper -->
+              <div class="swiper-wrapper swiper-no-swiping">
+                <!-- Slides -->
+                <div class="swiper-slide"><img src="img/projects/project.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="img/projects/project.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="img/projects/project.jpg" alt=""></div>
+
+              </div>
+
+            </div>
+
+
+          </div>
+          <!-- /.col-50 -->
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section section_dark projects -->
+
     <section class="section control">
       <div class="container">
         <div class="section-title">
@@ -105,7 +247,7 @@
         </div>
         <!-- /.section-title -->
         <div class="row">
-          <div class="col">
+          <div class="col-30">
             <div class="card types__card">
               <img src="img/types/type-1.jpg" alt="Косметический ремонт" class="card__image">
               <div class="card__text">
@@ -138,7 +280,7 @@
             <!-- /.card -->
           </div>
           <!-- /.col -->
-          <div class="col">
+          <div class="col-30">
             <div class="card types__card">
               <img src="img/types/type-2.jpg" alt="Капитальный ремонт" class="card__image">
               <div class="card__text">
@@ -171,7 +313,7 @@
             <!-- /.card -->
           </div>
           <!-- /.col -->
-          <div class="col">
+          <div class="col-30">
             <div class="card types__card">
               <img src="img/types/type-3.jpg" alt="Дизайнерский ремонт" class="card__image">
               <div class="card__text">
@@ -236,7 +378,7 @@
         </div>
         <!-- /.section-title -->
         <div class="row">
-          <div class="col">
+          <div class="col-30">
             <div class="card types__card">
               <img src="img/design-project/design-1.jpg" alt="Косметический ремонт" class="card__image">
               <div class="card__text">
@@ -263,7 +405,7 @@
             <!-- /.card -->
           </div>
           <!-- /.col -->
-          <div class="col">
+          <div class="col-30">
             <div class="card types__card">
               <img src="img/design-project/design-2.jpg" alt="Капитальный ремонт" class="card__image">
               <div class="card__text">
@@ -296,7 +438,7 @@
             <!-- /.card -->
           </div>
           <!-- /.col -->
-          <div class="col">
+          <div class="col-30">
             <div class="card types__card">
               <img src="img/design-project/design-3.jpg" alt="Дизайнерский ремонт" class="card__image">
               <div class="card__text">
@@ -375,6 +517,7 @@
   </div>
   <!-- /.modal -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
