--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
   <link rel="stylesheet" href="css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
+  <link rel="stylesheet" href="css/animate.css">
   <title>Document</title>
 </head>
 
@@ -15,10 +17,11 @@
   <header class="header">
     <div class="container">
       <div class="menu">
-        <div class="logo menu__logo">Repair Design Project</div>
+        <div class="logo menu__logo wow animate__animated animate__pulse">Repair Design
+          Project</div>
         <!-- /.logo -->
 
-        <nav class="nav menu__nav">
+        <nav class="nav menu__nav wow animate__animated animate__bounceInDown">
           <a href="#" class="nav__item">Главная</a>
           <a href="#" class="nav__item">Проекты</a>
           <a href="#" class="nav__item">Замер</a>
@@ -53,16 +56,16 @@
 
 
 
-          <h1 class="title hero__title">
+          <h1 class="title hero__title wow animate__animated animate__fadeInRight" data-wow-delay="0.1s">
             Турецкий ремонт в&nbsp;<span class="title_primary">Ростове-на-Дону</span>
           </h1>
-          <p class="hero__text">
+          <p class="hero__text wow animate__animated animate__fadeInRight" data-wow-delay="0.4s">
             Получите готовый ремонт под ключ в срок с экономией рабочего
             времени до 45 дней и 20% от стоимости материалов за счет
             организации работы
           </p>
 
-          <div class="hero__buttons">
+          <div class="hero__buttons wow animate__animated animate__fadeInRight" data-wow-delay="0.7s">
             <button class="button hero__button button_primary" data-toggle="modal">
               Рассчитать стоимость
             </button>
@@ -221,9 +224,9 @@
     <section class="section control">
       <div class="container">
         <div class="section-title control__section-title section-title_light">
-          <h2 class="section-title__heading">Онлайн контроль</h2>
+          <h2 class="section-title__heading wow animate__animated animate__fadeInUp">Онлайн контроль</h2>
           <!-- /.section-title__heading -->
-          <div class="section-title__image">
+          <div class="section-title__image wow animate__animated animate__fadeInUp">
             <img src="img/video.svg" alt="video">
           </div>
           <!-- /.section-title__image -->
@@ -273,9 +276,9 @@
 
 
         <div class="section-title types__section-title">
-          <h2 class="section-title__heading">Виды ремонта</h2>
+          <h2 class="section-title__heading wow animate__animated animate__fadeInUp">Виды ремонта</h2>
           <!-- /.section-title__heading -->
-          <div class="section-title__image">
+          <div class="section-title__image wow animate__animated animate__fadeInUp">
             <img src="img/repair.svg" alt="repair">
           </div>
           <!-- /.section-title__image -->
@@ -395,14 +398,14 @@
 
 
         <div class="section-title types__section-title">
-          <h2 class="section-title__heading">Дизайн-проект</h2>
+          <h2 class="section-title__heading wow animate__animated animate__fadeInUp">Дизайн-проект</h2>
           <!-- /.section-title__heading -->
-          <div class="section-title__image">
+          <div class="section-title__image wow animate__animated animate__fadeInUp">
             <img src="img/repair.svg" alt="repair">
           </div>
           <!-- /.section-title__image -->
 
-          <h2 class="section-title__text">
+          <h2 class="section-title__text_center">
             Дизайн-проект не только помогает сделать ремонт вашей квартиры более современным, но и значительно
             удешевляет материалы
             и сокращает время ремонтных работ
@@ -556,6 +559,7 @@
   <!-- /.modal -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+  <script src="js/wow.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
