--- a/index.html
+++ b/index.html
@@ -530,6 +530,95 @@
 
   </main>
 
+  <footer class="footer section_dark">
+
+    <div class="container">
+      <div class="footer__wrap">
+        <h3 class="footer__title">Остались вопросы?</h3>
+        <!-- /.footer__title -->
+        <form action="#" class="form footer__form">
+          <div class="input-group footer__input-group">
+            <label for="user-name" class="label form__label label_light">Имя</label>
+            <input type="text" class="input form__input footer__input input_light" id="user-name"
+              placeholder="Как Вас зовут:">
+          </div>
+          <!-- /.input-group footer__input-group -->
+
+
+          <div class="input-group footer__input-group">
+            <label for="user-phone" class="label form__label label_light">Телефон</label>
+            <input type="tel" class="input form__input footer__input input_light" id="user-phone"
+              placeholder="Ваш номер телефона:">
+          </div>
+          <!-- /.input-group footer__input-group -->
+
+
+
+          <div class="input-group footer__input-group footer__input-group_full-width">
+            <label for="user-question" class="label form__label label_light">Вопрос</label>
+            <input type="email" class="input form__input footer__input input_light" id="user-question"
+              placeholder="Я хочу спросить:">
+          </div>
+          <!-- /.input-group footer__input-group -->
+
+
+
+
+
+
+          <div class="policy footer__policy">
+            <input type="checkbox" class="policy__checkbox" name="policy-checkbox" id="policy-checkbox" checked>
+            <label for="policy-checkbox" class="policy__label policy__label_center">я соглашаюсь с обработкой
+              данных</label>
+          </div>
+          <button class="button button_primary footer__button">Отправить</button>
+
+        </form>
+        <!-- /.form footer__form -->
+
+      </div>
+      <!-- /.footer-wrap -->
+
+
+
+
+    </div>
+    <!-- /.container -->
+
+    <div class="footer__menu">
+      <div class="container">
+        <div class="menu">
+          <div class="logo menu__logo wow animate__animated animate__pulse">Repair Design
+            Project</div>
+          <!-- /.logo -->
+
+          <nav class="nav menu__nav wow animate__animated animate__bounceInDown">
+            <a href="#" class="nav__item">Главная</a>
+            <a href="#" class="nav__item">Проекты</a>
+            <a href="#" class="nav__item">Замер</a>
+            <a href="#" class="nav__item">Команда</a>
+            <a href="#" class="nav__item">Отзывы</a>
+            <a href="#" class="nav__item">Контакты</a>
+          </nav>
+          <!-- /.nav -->
+
+          <div class="contacts menu__contacts">
+            <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
+            <button class="button contacts__button button_primary" data-toggle="modal">
+              Заказать звонок
+            </button>
+          </div>
+        </div>
+        <!-- /.menu -->
+      </div>
+      <!-- /.container -->
+    </div>
+    <!-- /.footer__menu -->
+
+  </footer>
+  <!-- /.footer section section_dark -->
+
+
   <div class="modal">
     <div class="modal__dialog">
 
