form validation and mask added

--- a/index.html
+++ b/index.html
@@ -246,13 +246,14 @@
         <form action="#" class="form control__form">
           <div class="control__input-group">
             <label for="user-name" class="label form__label control__label">Имя</label>
-            <input type="text" class="input form__input control__input" id="user-name" placeholder="Как Вас зовут:">
+            <input type="text" name="userName" class="input-grey form__input control__input" id="user-name"
+              placeholder="Как Вас зовут:">
           </div>
           <!-- /.input-group -->
 
           <div class="control__input-group">
             <label for="user-phone" class="label form__label control__label">Телефон</label>
-            <input type="tel" class="input form__input control__input" id="user-phone"
+            <input type="tel" name=userPhone class="input-grey form__input control__input" id="user-phone"
               placeholder="Ваш номер телефона:">
           </div>
           <!-- /.input-group -->
@@ -539,7 +540,7 @@
         <form action="#" class="form footer__form">
           <div class="input-group footer__input-group">
             <label for="user-name" class="label form__label label_light">Имя</label>
-            <input type="text" class="input form__input footer__input input_light" id="user-name"
+            <input type="text" name=userName class="input form__input footer__input input_light" id="user-name"
               placeholder="Как Вас зовут:">
           </div>
           <!-- /.input-group footer__input-group -->
@@ -547,7 +548,7 @@
 
           <div class="input-group footer__input-group">
             <label for="user-phone" class="label form__label label_light">Телефон</label>
-            <input type="tel" class="input form__input footer__input input_light" id="user-phone"
+            <input type="tel" name=userPhone class="input form__input footer__input input_light" id="user-phone"
               placeholder="Ваш номер телефона:">
           </div>
           <!-- /.input-group footer__input-group -->
@@ -625,14 +626,30 @@
       <button class="modal__close"></button>
       <h3 class="modal__title">Оставьте заявку и наш менеджер свяжется с вами</h3>
       <form action="#" class="form modal__form">
-        <label for="user-name" class="label form__label label_light">Имя</label>
-        <input type="text" class="input form__input modal__input input_light" id="user-name"
-          placeholder="Как Вас зовут:">
-        <label for="user-phone" class="label form__label label_light">Телефон</label>
-        <input type="tel" class="input form__input modal__input input_light" id="user-phone"
-          placeholder="Ваш номер телефона:">
-        <label for="user-email" class="label form__label label_light">Email</label>
-        <input type="email" class="input form__input modal__input input_light" id="user-email" placeholder="Ваш email:">
+        <div class="input-group modal__input-group">
+          <label for="user-name" class="label form__label label_light">Имя</label>
+          <input type="text" name="userName" class="input form__input modal__input input_light" id="user-name"
+            placeholder="Как Вас зовут:">
+
+        </div>
+        <!-- /.input-group modal__input-group -->
+        <div class="input-group modal__input-group">
+          <label for="user-phone" class="label form__label label_light">Телефон</label>
+          <input type="tel" name="userPhone" class="input form__input modal__input input_light" id="user-phone"
+            placeholder="Ваш номер телефона:">
+
+        </div>
+        <!-- /.input-group modal__input-group -->
+        <div class="input-group modal__input-group">
+          <label for="user-email" class="label form__label label_light">Email</label>
+          <input type="email" name="userEmail" class="input form__input modal__input input_light" id="user-email"
+            placeholder="Ваш email:">
+
+        </div>
+        <!-- /.input-group modal__input-group -->
+
+
+
         <div class="policy modal__policy">
           <input type="checkbox" class="policy__checkbox" name="policy-checkbox" id="policy-checkbox" checked>
           <label for="policy-checkbox" class="policy__label">я соглашаюсь с обработкой
@@ -649,6 +666,8 @@
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
   <script src="js/wow.min.js"></script>
+  <script src="js/jquery.validate.min.js"></script>
+  <script src="js/jquery.mask.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
