--- a/index.html
+++ b/index.html
@@ -564,12 +564,9 @@
 
 
 
-
-
-
           <div class="policy footer__policy">
             <input type="checkbox" class="policy__checkbox" name="policy-checkbox" id="policy-checkbox" checked>
-            <label for="policy-checkbox" class="policy__label policy__label_center">я соглашаюсь с обработкой
+            <label for="policy-checkbox" class="policy__label policy__label_center">я соглашаюсь на обработку
               данных</label>
           </div>
           <button class="button button_primary footer__button">Отправить</button>
