form validation bugs fixed

--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
             <label for="user-name" class="label form__label control__label">Имя</label>
             <input type="text" name="userName" class="input-grey form__input control__input" id="user-name"
               placeholder="Как Вас зовут:">
+
           </div>
           <!-- /.input-group -->
 
@@ -255,14 +256,15 @@
             <label for="user-phone" class="label form__label control__label">Телефон</label>
             <input type="tel" name=userPhone class="input-grey form__input control__input" id="user-phone"
               placeholder="Ваш номер телефона:">
+
           </div>
           <!-- /.input-group -->
 
           <button class="button button_primary control__button">Отправить</button>
 
           <div class="policy control__policy">
-            <input type="checkbox" class="policy__checkbox" name="policy-checkbox" id="policy-checkbox" checked>
-            <label for="policy-checkbox" class="policy__label control__policy-label">я соглашаюсь с обработкой
+            <input type="checkbox" class="policy__checkbox" name="policycheckbox" id="policycheckbox" checked>
+            <label for="policycheckbox" class="policy__label control__policy-label">я соглашаюсь на обработку
               данных</label>
           </div>
 
@@ -565,8 +567,8 @@
 
 
           <div class="policy footer__policy">
-            <input type="checkbox" class="policy__checkbox" name="policy-checkbox" id="policy-checkbox" checked>
-            <label for="policy-checkbox" class="policy__label policy__label_center">я соглашаюсь на обработку
+            <input type="checkbox" class="policy__checkbox" name="policycheckbox2" id="policycheckbox2">
+            <label for="policycheckbox2" class="policy__label policy__label_center">я соглашаюсь на обработку
               данных</label>
           </div>
           <button class="button button_primary footer__button">Отправить</button>
@@ -648,8 +650,8 @@
 
 
         <div class="policy modal__policy">
-          <input type="checkbox" class="policy__checkbox" name="policy-checkbox" id="policy-checkbox" checked>
-          <label for="policy-checkbox" class="policy__label">я соглашаюсь с обработкой
+          <input type="checkbox" class="policy__checkbox" name="policycheckbox3" id="policycheckbox3">
+          <label for="policycheckbox3" class="policy__label">я соглашаюсь с обработкой
             данных</label>
         </div>
         <button class="button button_primary modal__button">Отправить заявку</button>
