--- a/index.html
+++ b/index.html
@@ -579,7 +579,27 @@
       </div>
       <!-- /.footer-wrap -->
 
+      <div class="address-contacts">
+        <p class="address">
+          Нижний Новгород, ул. Пискунова, д.41<br>Телефон: +7 (831) 4585944
+        </p>
+        <!-- /.address -->
 
+        <div class="contacts">
+          <div class="email"></div>
+          <div class="insta"></div>
+        </div>
+        <!-- /.contacts -->
+
+      </div>
+      <!-- /.address-contacts -->
+
+
+      <div class="map footer__map">
+        <script type="text/javascript" charset="utf-8" async
+          src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A37905b2b6a9c22e3ce9015b5f24709b1ecc9a4c6b6d35ee0fae034cb27acab49&amp;width=100%25&amp;height=465&amp;lang=ru_RU&amp;scroll=false"></script>
+      </div>
+      <!-- /.map footer__map -->
 
 
     </div>
