--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
           заявку ниже чтобы получить ссылку на трансляцию.</p>
         <!-- /.control__text -->
         <form action="#" class="form control__form">
-          <div class="control__input-group">
+          <div class="control__input-group" id="div-user-name">
             <label for="user-name" class="label form__label control__label">Имя</label>
             <input type="text" name="userName" class="input-grey form__input control__input" id="user-name"
               placeholder="Как Вас зовут:">
@@ -263,7 +263,7 @@
           <button class="button button_primary control__button">Отправить</button>
 
           <div class="policy control__policy">
-            <input type="checkbox" class="policy__checkbox" name="policycheckbox" id="policycheckbox" checked>
+            <input type="checkbox" class="policy__checkbox" name="policycheckbox" id="policycheckbox">
             <label for="policycheckbox" class="policy__label control__policy-label">я соглашаюсь на обработку
               данных</label>
           </div>
@@ -542,7 +542,7 @@
         <form action="#" class="form footer__form">
           <div class="input-group footer__input-group">
             <label for="user-name" class="label form__label label_light">Имя</label>
-            <input type="text" name=userName class="input form__input footer__input input_light" id="user-name"
+            <input type="text" name=userName class="input form__input footer__input input_light" id="user-name2"
               placeholder="Как Вас зовут:">
           </div>
           <!-- /.input-group footer__input-group -->
@@ -550,7 +550,7 @@
 
           <div class="input-group footer__input-group">
             <label for="user-phone" class="label form__label label_light">Телефон</label>
-            <input type="tel" name=userPhone class="input form__input footer__input input_light" id="user-phone"
+            <input type="tel" name=userPhone class="input form__input footer__input input_light" id="user-phone2"
               placeholder="Ваш номер телефона:">
           </div>
           <!-- /.input-group footer__input-group -->
@@ -559,7 +559,7 @@
 
           <div class="input-group footer__input-group footer__input-group_full-width">
             <label for="user-question" class="label form__label label_light">Вопрос</label>
-            <input type="email" class="input form__input footer__input input_light" id="user-question"
+            <input type="text" class="input form__input footer__input input_light" id="user-question"
               placeholder="Я хочу спросить:">
           </div>
           <!-- /.input-group footer__input-group -->
@@ -647,21 +647,21 @@
       <form action="#" class="form modal__form">
         <div class="input-group modal__input-group">
           <label for="user-name" class="label form__label label_light">Имя</label>
-          <input type="text" name="userName" class="input form__input modal__input input_light" id="user-name"
+          <input type="text" name="userName" class="input form__input modal__input input_light" id="user-name3"
             placeholder="Как Вас зовут:">
 
         </div>
         <!-- /.input-group modal__input-group -->
         <div class="input-group modal__input-group">
           <label for="user-phone" class="label form__label label_light">Телефон</label>
-          <input type="tel" name="userPhone" class="input form__input modal__input input_light" id="user-phone"
+          <input type="tel" name="userPhone" class="input form__input modal__input input_light" id="user-phone3"
             placeholder="Ваш номер телефона:">
 
         </div>
         <!-- /.input-group modal__input-group -->
         <div class="input-group modal__input-group">
           <label for="user-email" class="label form__label label_light">Email</label>
-          <input type="email" name="userEmail" class="input form__input modal__input input_light" id="user-email"
+          <input type="email" name="userEmail" class="input form__input modal__input input_light" id="user-email3"
             placeholder="Ваш email:">
 
         </div>
