--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
           Оставьте
           заявку ниже чтобы получить ссылку на трансляцию.</p>
         <!-- /.control__text -->
-        <form action="#" class="form control__form">
+        <form action="send.php" method="POST" class="form control__form">
           <div class="control__input-group" id="div-user-name">
             <label for="user-name" class="label form__label control__label">Имя</label>
             <input type="text" name="userName" class="input-grey form__input control__input" id="user-name"
@@ -254,7 +254,7 @@
 
           <div class="control__input-group">
             <label for="user-phone" class="label form__label control__label">Телефон</label>
-            <input type="tel" name=userPhone class="input-grey form__input control__input" id="user-phone"
+            <input type="tel" name="userPhone" class="input-grey form__input control__input" id="user-phone"
               placeholder="Ваш номер телефона:">
 
           </div>
@@ -539,10 +539,10 @@
       <div class="footer__wrap">
         <h3 class="footer__title">Остались вопросы?</h3>
         <!-- /.footer__title -->
-        <form action="#" class="form footer__form">
+        <form action="send.php" method="POST" class="form footer__form">
           <div class="input-group footer__input-group">
             <label for="user-name" class="label form__label label_light">Имя</label>
-            <input type="text" name=userName class="input form__input footer__input input_light" id="user-name2"
+            <input type="text" name="userName" class="input form__input footer__input input_light" id="user-name2"
               placeholder="Как Вас зовут:">
           </div>
           <!-- /.input-group footer__input-group -->
@@ -550,7 +550,7 @@
 
           <div class="input-group footer__input-group">
             <label for="user-phone" class="label form__label label_light">Телефон</label>
-            <input type="tel" name=userPhone class="input form__input footer__input input_light" id="user-phone2"
+            <input type="tel" name="userPhone" class="input form__input footer__input input_light" id="user-phone2"
               placeholder="Ваш номер телефона:">
           </div>
           <!-- /.input-group footer__input-group -->
@@ -559,7 +559,7 @@
 
           <div class="input-group footer__input-group footer__input-group_full-width">
             <label for="user-question" class="label form__label label_light">Вопрос</label>
-            <input type="text" class="input form__input footer__input input_light" id="user-question"
+            <input type="text" name="question" class="input form__input footer__input input_light" id="user-question"
               placeholder="Я хочу спросить:">
           </div>
           <!-- /.input-group footer__input-group -->
@@ -644,7 +644,7 @@
 
       <button class="modal__close"></button>
       <h3 class="modal__title">Оставьте заявку и наш менеджер свяжется с вами</h3>
-      <form action="#" class="form modal__form">
+      <form action="send.php" method="POST" class="form modal__form">
         <div class="input-group modal__input-group">
           <label for="user-name" class="label form__label label_light">Имя</label>
           <input type="text" name="userName" class="input form__input modal__input input_light" id="user-name3"
@@ -671,7 +671,7 @@
 
         <div class="policy modal__policy">
           <input type="checkbox" class="policy__checkbox" name="policycheckbox3" id="policycheckbox3">
-          <label for="policycheckbox3" class="policy__label">я соглашаюсь с обработкой
+          <label for="policycheckbox3" class="policy__label">я соглашаюсь на обработку
             данных</label>
         </div>
         <button class="button button_primary modal__button">Отправить заявку</button>
