--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header class="header">
     <div class="container">
       <div class="menu">
-        <div class="logo menu__logo wow animate__animated animate__pulse">Repair Design
+        <div class="logo menu__logo wow animate__animated animate__pulse">epair Design
           Project</div>
         <!-- /.logo -->
 
