forms adaptives done

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header class="header">
     <div class="container">
       <div class="menu">
-        <div class="logo menu__logo wow animate__animated animate__pulse">epair Design
+        <div class="logo menu__logo wow animate__animated animate__pulse">Repair Design
           Project</div>
         <!-- /.logo -->
 
@@ -221,7 +221,7 @@
     </section>
     <!-- /.section section_dark projects -->
 
-    <section class="section control">
+    <section class="section control section_mobile">
       <div class="container">
         <div class="section-title control__section-title section-title_light">
           <h2 class="section-title__heading wow animate__animated animate__fadeInUp">Онлайн контроль</h2>
@@ -279,7 +279,8 @@
 
 
         <div class="section-title types__section-title">
-          <h2 class="section-title__heading wow animate__animated animate__fadeInUp">Виды ремонта</h2>
+          <h2 class="section-title__heading section-title__heading_types wow animate__animated animate__fadeInUp">Виды
+            ремонта</h2>
           <!-- /.section-title__heading -->
           <div class="section-title__image wow animate__animated animate__fadeInUp">
             <img src="img/repair.svg" alt="repair">
@@ -396,7 +397,7 @@
     <!-- /.section types -->
 
 
-    <section class="section types section_mobile-dark">
+    <section class="section types section_mobile">
       <div class="container">
 
 
