another fix after code validation

--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
         </div>
         <!-- /.input-group modal__input-group -->
         <div class="input-group modal__input-group">
-          <label for="user-email" class="label form__label label_light">Email</label>
+          <label for="user-email3" class="label form__label label_light">Email</label>
           <input type="email" name="userEmail" class="input form__input modal__input input_light" id="user-email3"
             placeholder="Ваш email:">
 
