--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
     <!-- /.section types -->
 
 
-    <section class="section types section_mobile">
+    <section class="section section_mobile design-project">
       <div class="container">
 
 
@@ -598,6 +598,7 @@
       <div class="map footer__map">
         <script async
           src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A37905b2b6a9c22e3ce9015b5f24709b1ecc9a4c6b6d35ee0fae034cb27acab49&amp;width=100%25&amp;height=465&amp;lang=ru_RU&amp;scroll=false"></script>
+        <!--<img src="img/map-cover.jpg" alt="map-cover">-->
       </div>
       <!-- /.map footer__map -->
 
