--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
   <link rel="stylesheet" href="css/animate.css">
+  <link rel="icon" href="img/favicon.png" type="image/x-icon">
   <title>Document</title>
 </head>
 
@@ -586,7 +587,7 @@
         <!-- /.address -->
 
         <div class="contacts">
-          <a class="email" href="mailto: info@design.ru"></a>
+          <a class="email" href="mailto:info@design.ru"></a>
           <a class="insta" href="https://www.instagram.com/screen_saver_000/"></a>
         </div>
         <!-- /.contacts -->
@@ -602,6 +603,7 @@
       </div>
       <!-- /.map footer__map -->
 
+      <div id="button-up">Наверх</div>
 
     </div>
     <!-- /.container -->
